tests/paczka1/fuzzy1/45909414.err
Error in line 2: APsuQ S632 96,4
Error in line 8: BZlD S632 3,9
Error in line 11: S632 A739 73,7
Error in line 12: S632 S632 97,3
Error in line 26: xUUG9 S948 19,6
Error in line 34: APsuQ S361 46,2
Error in line 24: pdvTT S948 24,7
